# CUDA-Recommender

./: .appveyor.yml  .gitignore  .travis.linux.sh  .travis.osx.sh  .travis.yml  ALS.cpp  ALS_headerToC.h  ALS_onCUDA.cu  ALS_onCUDA.h  CCDPP_onCUDA.cu  CCDPP_onCUDA.h  CMakeLists.txt  Makefile  appveyor.yml  ccd-r1.cpp  ccd-r1_original.cpp  ccd_headerToC.h  pmf-predict.cpp  pmf-train.cpp  pmf.h  pmf_original.h  sonar-project.properties  util.cpp  util.h  util_original.cpp  util_original.h
.ci/: travis_linux  travis_osx
cuda_src/: ALS_CUDA.cu  ALS_CUDA.h  ALS_headerToC.h  ALS_onCUDA.cu  ALS_onCUDA.h  CCDPP_onCUDA.cu  CCDPP_onCUDA.h  CCD_CUDA.cu  CCD_CUDA.h  CUDA_AUX.cu  CUDA_AUX.h  ERROR_CHECKING.cu  ERROR_CHECKING.h
predict_src/: pmf-predict.cpp  util_original.h
scripts/: doit.sh  grep_it.sh  run_this.sh  times.sh  travis_linux  travis_osx
src/: ALS.cpp  ALS.h  CCD.cpp  CCD.h  ccd-r1.cpp  ccd-r1_original.cpp  extras.cpp  extras.h  main.cpp  main.h  pmf-train.cpp  pmf-train.h  pmf.h  pmf_original.h  pmf_util.h  tools.cpp  tools.h  util.cpp  util.h  util_original.cpp  util_original.h
